Fixed reflective constructor call in getSelector().